--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -137,7 +137,7 @@
     </tbody>
 </table>
 
-<h3><a href="#sms-template-examples" id="sms-template-components">SMS Template Components</a></h3>
+<h3><a href="#sms-template-examples" id="sms-template-components">SMS Template Examples</a></h3>
 [TODO: @dlohani once we're ready, let's do examples for each type of template (maybe also what it would look like rendered)]
 
 <h2>Localization</h2>
