--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -86,7 +86,7 @@
     </tbody>
 </table>
 
-<h3><a href="#email-template-examples" id="email-template-components">Email Template Components</a></h3>
+<h3><a href="#email-template-examples" id="email-template-components">Email Template Examples</a></h3>
 [TODO: @dlohani once we're ready, let's do examples for each type of template (maybe also what it would look like rendered)]
 
 <h2><a href="#sms-templates" id="sms-templates">SMS Templates</a></h2>
