--- a/app/views/docs/attribute-model.phtml
+++ b/app/views/docs/attribute-model.phtml
@@ -37,7 +37,7 @@
 
 <h2>Examples</h2>
 
-<p>This is a generic attribute model that specific attribute types implement. For examples, view a specific attribute models.</p>
+<p>Appwrite has many types of attributes that extend the properties of this generic attribute object. To view examples, visit the page for your specific attribute type.</p>
 <p>
 <a href="/docs/models/attributeBoolean"><i class="icon-angle-circled-right"></i>attributeBoolean</a>
 </p>
