--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -187,7 +187,7 @@ if (!\function_exists('skipLanguage')) {
                             
                             <?php 
                                 // if version is lower than 1.2.x, don't show GraphQL and REST as selectable SDKs
-                                if (strcmp($version, "1.2.x") < 0) {
+                                if (strcmp($versions[$version]['docs'], "1.2.x") < 0) {
                                     continue;
                                 }   
                             ?>
@@ -229,7 +229,7 @@ if (!\function_exists('skipLanguage')) {
                             $name = (isset($value['name'])) ? $value['name'] : '';
                             $selected = ($key === $version) ? ' selected' : '';
                             ?>
-                            <?php if(!in_array($sdk, ['rest-default', 'graphql-default']) || strcmp($key, "1.2.x") >= 0): ?>
+                            <?php if(!in_array($sdk, ['rest-default', 'graphql-default']) || strcmp($versions[$key]['docs'], "1.2.x") >= 0): ?>
                                 <option value="<?php echo $this->escape($key); ?>"<?php echo ($key === $sdk) ? ' selected' : ''; ?><?php echo $selected; ?>><?php echo $this->escape($name); ?></option>
                             <?php endif; ?>
                         <?php endforeach; ?>
