--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -105,6 +105,18 @@
                 <a href="https://gitpod.io/#https://github.com/appwrite/integration-for-gitpod" target="_blank" rel="noopener">Click to Install</a>
             </td>
         </tr>
+        <tr>
+            <td>
+                <img src="/images-ee/one-click/linode.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/one-click/dark/linode.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+            </td>
+            <td>
+                Linode
+            </td>
+            <td>
+                <a href="https://www.linode.com/marketplace/apps/appwrite/appwrite/" target="_blank" rel="noopener">Click to Install</a>
+            </td>
+        </tr>
     </tbody>
 </table>
 
