--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -107,11 +107,11 @@
         </tr>
         <tr>
             <td>
-                <img src="/images-ee/one-click/linode.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
-                <img src="/images-ee/one-click/dark/linode.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
+                <img src="/images-ee/one-click/akamai.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/one-click/dark/akamai.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
-                Linode
+                Akmai
             </td>
             <td>
                 <a href="https://www.linode.com/marketplace/apps/appwrite/appwrite/" target="_blank" rel="noopener">Click to Install</a>
