Reorder index, add shell for quickstart example

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -16,8 +16,123 @@ $runtimes = $this->getParam('runtimes', []);
 
 <h2><a href="#gettingStarted" id="gettingStarted">Getting Started</a></h2>
 <p>
-    The quickest way to experience Appwrite functions is to [TODO: @matej What's a good example to show to give devs an idea of what Appwrite Functions workflow is like?]
+    Appwrite Functions unlock limitless possibilities, but it's simple to get started. You can deploy your first function and execute it in minutes.
 </p>
+
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Node.js</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
+            <pre class="line-numbers"><code class="prism language-js" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>PHP</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP">
+            <pre class="line-numbers"><code class="prism language-php" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Python</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="python" data-lang-label="Python">
+            <pre class="line-numbers"><code class="prism language-python" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Ruby</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby">
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Deno</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno">
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Dart</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart">
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Swift</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>.NET</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>
+
+            </code></pre>
+        </div>
+
+        </div>
+    </li>
+    <li>
+        <h3>Java</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="java" data-lang-label="Java">
+            <pre class="line-numbers"><code class="prism language-java" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>C++</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+</ul>
+
 
 <h2><a href="#exploreFeatures" id="exploreFeatures">Explore Features</a></h2>
 <p>
@@ -33,6 +148,16 @@ $runtimes = $this->getParam('runtimes', []);
 
 <p>
 <a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using function templates</a>
+</p>
+
+<h3><a href="#syntax" id="syntax">Syntax</a></h3>
+<p>
+Writing Appwrite Functions should feel familiar to writing controllers in an HTTP server.
+In your function, you'll receive a request object, add transformations and logic, then return a response.
+Almost anything can be executed as code in an Appwrite Function.
+</p>
+<p>
+<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using function syntax</a>
 </p>
 
 <h3><a href="#deploy" id="deploy">Deploy</a></h3>
@@ -54,15 +179,6 @@ Explore using Appwrite Functions to execute a complex routine of logic, or execu
 <a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using executing functions</a>
 </p>
 
-<h3><a href="#syntax" id="syntax">Syntax</a></h3>
-<p>
-Writing Appwrite Functions should feel familiar to writing controllers in an HTTP server.
-In your function, you'll receive a request object, add transformations and logic, then return a response.
-Almost anything can be executed as code in an Appwrite Function.
-<p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using function syntax</a>
-</p>
-</p>
 <h3><a href="#runtime" id="runtime">Runtime</a></h3>
 <p>
 Appwrite supports many open-source runtimes. Find your prefered language and start writing your functions.
