--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -157,7 +157,7 @@ In your function, you'll receive a request object, add transformations and logic
 Almost anything can be executed as code in an Appwrite Function.
 </p>
 <p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using function syntax</a>
+<a href="/docs/functions-syntax"><i class="icon-angle-circled-right"></i>Learn more about using function syntax</a>
 </p>
 
 <h3><a href="#deploy" id="deploy">Deploy</a></h3>
@@ -193,4 +193,10 @@ So it's important to be able to log, debug, and test your Appwrite Functions in 
 </p>
 <p>
 <a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about debugging functions</a>
+</p>
+
+<h2><a href="#upgrade" id="upgrade">Upgrade</a></h2>
+<p>
+    Appwrite Functions received major upgrades in Appwrite version 1.4. 
+    If you still have functions from previous versions, [TODO: @matej what is the consequence what should they do?]
 </p>
