Remove extra line breaks

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -230,8 +230,7 @@ let client = Client()
 var client = new Client()
   .SetEndpoint("http://cloud.appwrite.io/v1")  // Your Appwrite Endpoint
   .SetProject("[PROJECT_ID]")               // Your project ID
-  .SetKey("919c2db5d4...a2a3346ad2");                        // Your secret API Key
-</code></pre>
+  .SetKey("919c2db5d4...a2a3346ad2");                        // Your secret API Key</code></pre>
         </div>
     </li>
 </ul>
@@ -563,8 +562,7 @@ var user = await users.Create(
     userId: ID.Unique(),
     email: "email@example.com",
     phone: null,
-    password: "password");
-</code></pre>
+    password: "password");</code></pre>
         </div>
     </li>
 </ul>
@@ -775,8 +773,7 @@ var user = await users.Create(
     userId: ID.Unique(),
     email: "email@example.com",
     phone: null,
-    password: "password");
-</code></pre>
+    password: "password");</code></pre>
         </div>
     </li>
 </ul>
