Fix comment in Swift example

--- a/app/views/docs/authentication-server.phtml
+++ b/app/views/docs/authentication-server.phtml
@@ -623,7 +623,7 @@ client
         databaseId: "642f358bf4084c662590",
         collectionId: "642f3592aa5fc856ad1e"
     )
-    / ... More code to manipulate the results</code></pre>
+    // ... More code to manipulate the results</code></pre>
         </div>
     </li>
     <li>
