--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -93,6 +93,12 @@ $cols = [
                         </ul>
                     </li>
                     <li><a href="/docs/functions">Functions</a></li>
+                    <li>
+                        <a href="/docs/migration"><i class="icon-right-dir"></i> Migration</a>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-firebase" data-selected="/docs/migration-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <div class="margin-bottom-small">
