Add node js example

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -4,8 +4,7 @@
     Here's what you need to know to start writing your first Appwrite Function.
 </p>
 
-<h2><a href="#life-cycle" id="life-cycle">Function Life Cycle</a></h2>
-[TODO: @matej, describe the life cycle of a function, maybe build a UML and give to jade to mock up (optional)]
+[TODO: CTA if you just want examples, click this link]
 
 <h2><a href="#context" id="context">The Context Object</a></h2>
 
@@ -14,9 +13,17 @@
 <h3><a href="#response" id="response">Response</a></h3>
 
 <h3><a href="#logging" id="logging">Logging</a></h3>
+-> LIST WHAT WE SHOW AND WHAT WE DONT SHOW
 
 <h2><a href="#environment-variables" id="environment-variables">Accessing Environment Variables</a></h2>
 
+<h2><a href="#dependencies" id="dependencies">Depencies</a></h2>
+
 <h2><a href="#appwrite" id="appwrite">Using Appwrite in a Function</a></h2>
+[TODO: 2 examples -> JWT and API keys]
+
+<h2><a href="#recipes" id="recipes">Recipes</a></h2>
+[TODO: Matej and Luke write examples]
 
 <h2><a href="#limitations" id="limitations">Limitations</a></h2>
+<!-- <p>Libraries dependent on</p> -->
