--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -1,20 +1,26 @@
 <p>
     Appwrite Functions executions can be invoked in several ways.
-    Functions can be invoked through the Appwrite SDK and visting its preview link. Functions can also be triggered by events, webhooks, and scheduled executions.
+    Functions can be invoked through the Appwrite SDK and visting its REST endpoint. Functions can also be triggered by events and scheduled executions.
     Here are all the different ways to consume your new Appwrite Functions.
 </p>
 
-<h2><a href="#sdk" id="sdk">SDK</a></h2>
+<h2><a href="#domain" id="domain">Domain</a></h2>
 <p>
-   
-</p>
-
-<h2><a href="#preview" id="preview">Preview Link</a></h2>
-<p>
-    Each Appwrite function also has its own preview link. 
+    Each Appwrite function has its own domain. (can be custom)
     When requests are made to this link, whether through a browser or through an HTTP requests, 
     the request information like request headers and request body will be passed to the function.
     This unlocks interesting ways to integrate other apps and backends to your Appwrite project.
+</p>
+
+DOMAIN IGNORE PERMISSIONS AOSDHFGAKSHDJG
+
+<h2><a href="#sdk" id="sdk">SDK</a></h2>
+- two examples
+    -> sync
+    -> async
+    -> pass body
+<p>
+   
 </p>
 
 <h2><a href="#events" id="events">Events</a></h2>
@@ -22,14 +28,11 @@
    
 </p>
 
-<h2><a href="#webhooks" id="webhooks">Webhooks</a></h2>
-<p>
-   
-</p>
-
 
 <h2><a href="#schedule" id="schedule">Schedule</a></h2>
-<p>
-   
+<p> 
    
 </p>
+
+[TODO: EXECUTION ARTIFACTS/LOGS/STUFF]
+
