More shell for the functions

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -138,6 +138,8 @@ $runtimes = $this->getParam('runtimes', []);
 
 <h2><a href="#exploreFeatures" id="exploreFeatures">Explore Features</a></h2>
 <p>
+    Appwrite Functions help you start small and scale big. 
+    Now you've created your first Appwrite Function, it's time to learn the different ways to develop, deploy, and execute your Appwrite Functions. 
     To fully harness the power of Appwrite Functions, explore the following features.
 </p>
 
@@ -159,7 +161,7 @@ In your function, you'll receive a request object, add transformations and logic
 Almost anything can be executed as code in an Appwrite Function.
 </p>
 <p>
-<a href="/docs/functions-syntax"><i class="icon-angle-circled-right"></i>Learn more about using function syntax</a>
+<a href="/docs/functions-develop"><i class="icon-angle-circled-right"></i>Learn more about developing functions</a>
 </p>
 
 <h3><a href="#deploy" id="deploy">Deploy</a></h3>
@@ -168,7 +170,7 @@ Almost anything can be executed as code in an Appwrite Function.
     You can deploy them from a GitHub repository branch or using the Appwrite CLI.
 </p>
 <p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using deploying functions</a>
+<a href="/docs/functions-deploy"><i class="icon-angle-circled-right"></i>Learn more about using deploying functions</a>
 </p>
 
 <h3><a href="#execute" id="execute">Execute</a></h3>
@@ -178,7 +180,7 @@ This flexible execution models unlocks many potential usecases for Appwrite func
 Explore using Appwrite Functions to execute a complex routine of logic, or execute background tasks on a schedule.
 </p>
 <p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using executing functions</a>
+<a href="/docs/functions-execute"><i class="icon-angle-circled-right"></i>Learn more about using executing functions</a>
 </p>
 
 <h3><a href="#runtime" id="runtime">Runtime</a></h3>
