Further rebrand from Akamai

--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -111,7 +111,7 @@
                 <img src="/images-ee/one-click/dark/akamai.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
-                Akamai
+                Akamai Compute
             </td>
             <td>
                 <a href="https://www.linode.com/marketplace/apps/appwrite/appwrite/" target="_blank" rel="noopener">Click to Install</a>
