--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -161,13 +161,286 @@
 </ul>
 
 <h3><a href="#request" id="request">Request</a></h3>
-[TODO: full table of what's in a request]
-[TODO: full examples of what's in a request]
+<p>
+    If you pass data into an Appwrite function, it'll be found in the request object. 
+    This includes all invokation methods, such as data from Appwrite SDKs, HTTP calls, Appwrite events, and browsers visiting the configured domain.
+    Explore the request object with the following function, which logs all request params to the Appwrite Console.
+</p>
+
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Node.js</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
+            <pre class="line-numbers"><code class="prism language-js" data-prism>export default async ({ req, res, log }) => {
+    log(req.bodyString);  // Raw request body, contains request data
+    log(req.body);        // Body parsed on content-type, only supports JSON
+    log(req.headers);     // Request headers
+    log(req.scheme);      // Value of the x-forwarded-proto header, usually http or https
+    log(req.method);      // Request method, such as GET, POST, PUT, DELETE, PATCH, etc.
+    log(req.url);         // Full URL, for example: http://awesome.appwrite.io:8000/v1/hooks?limit=12&offset=50
+    log(req.host);        // Hostname from the host header, such as awesome.appwrite.io
+    log(req.port);        // Port from the host header, for example 8000
+    log(req.path);        // Path part of URL, for example /v1/hooks
+    log(req.queryString); // Raw query params string. For example "limit=12&offset=50"
+    log(req.query);       // Parsed query params. For example, req.query.limit
+
+    return res.send("All the request parameters are logged to the Appwrite Console.");
+};</code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>PHP</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP">
+            <pre class="line-numbers"><code class="prism language-php" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Python</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="python" data-lang-label="Python">
+            <pre class="line-numbers"><code class="prism language-python" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Ruby</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby">
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Deno</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno">
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Dart</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart">
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Swift</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>.NET</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>
+
+            </code></pre>
+        </div>
+
+        </div>
+    </li>
+    <li>
+        <h3>Java</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="java" data-lang-label="Java">
+            <pre class="line-numbers"><code class="prism language-java" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>C++</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+</ul>
 
 <h3><a href="#response" id="response">Response</a></h3>
-[TODO: Full table of what's in a res]
-[TODO: full examples of what's in a res]
+<p>
+    If you need to send a response to the invoker of the function, such as a user, client app, or an integration, use the response object.
+    The response information <b>will not be logged</b> to the Appwrite Console.
+    There are several possible ways to send a response, explore them in the following Appwrite Function.
+</p>
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Node.js</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="javascript" data-lang-label="JavaScript">
+            <pre class="line-numbers"><code class="prism language-js" data-prism>export default async ({ req, res, log }) => {
+    switch (req.body) {
+        case 'send':
+            return res.send(
+                "This is a text response", 
+                200, 
+                {
+                    "content-type": "application/text"
+                }
+            );
+        case 'json':
+            return res.json(
+                {
+                    "type": "This is a JSON response"
+                }, 
+                200, 
+                {
+                    "content-type": "application/json"
+                }
+            );
+        case 'redirect':
+            return res.json(
+                "https://appwrite.io", 
+                301, 
+                {
+                    "content-type": "application/json"
+                }
+            );
+        default:
+            return res.empty();
+    }
+};</code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>PHP</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP">
+            <pre class="line-numbers"><code class="prism language-php" data-prism>
 
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Python</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="python" data-lang-label="Python">
+            <pre class="line-numbers"><code class="prism language-python" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Ruby</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby">
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Deno</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno">
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Dart</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart">
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Swift</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>.NET</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>
+
+            </code></pre>
+        </div>
+
+        </div>
+    </li>
+    <li>
+        <h3>Java</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="java" data-lang-label="Java">
+            <pre class="line-numbers"><code class="prism language-java" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+    <li>
+        <h3>C++</h3>
+        <div>
+        <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>
+
+            </code></pre>
+        </div>
+        </div>
+    </li>
+</ul>
 
 <h3><a href="#logging" id="logging">Logging</a></h3>
 <p>
